alignment fixes for carousels

--- a/src/blocks/block-carousel/styles/style.scss
+++ b/src/blocks/block-carousel/styles/style.scss
@@ -16,6 +16,16 @@
 	padding-right: 0;
 }
 
+@media only screen and (min-width: 1px) {
+
+	.page-template-default .entry-content .c9-carousel.alignwide,
+	.c9-carousel.alignwide {
+		width: 100%;
+		margin-left: 0;
+		margin-right: 0;
+	}
+}
+
 @media only screen and (min-width: 768px) {
 
 	.page-template-default .page .entry-content .c9-carousel.alignwide.container,
@@ -68,6 +78,7 @@
 .c9-carousel .carousel-control-next,
 .c9-carousel .carousel-control-prev {
 	width: 25px;
+	z-index: 22;
 }
 
 .c9-carousel .carousel-control-prev .carousel-control-prev-icon {
